InternexDev_Sandbox/src/objects/PR_and_RMH__c.object
<CustomObject>
    <fields>
        <fullName>PaymentLineItemCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PaymentLineItemCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WF_PR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WF_PR</label>
        <referenceTo>WF_PR__c</referenceTo>
        <relationshipLabel>PR and RMHS</relationshipLabel>
        <relationshipName>PR_and_RMHS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WF_RMH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WF_RMH</label>
        <referenceTo>WF_RMH__c</referenceTo>
        <relationshipLabel>PR and RMHS</relationshipLabel>
        <relationshipName>PR_and_RMHS</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PR and RMH</label>
    <nameField>
        <displayFormat>PRRMH-{00000}</displayFormat>
        <label>PR and RMH Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PR and RMHS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>